--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "env": {
         "APP_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
         "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
-        "TG_BOT_TOKEN": {"description": "Get Bot Token From @BotFather Bot", "required": true},
+        "BOT_TOKEN": {"description": "Get Bot Token From @BotFather Bot", "required": true},
         "SUPPORT_CHAT": {"description": "Public group / channel username of the discussion chat (include - @)", "required": false},
         "AUTH_USERS": {"description":  "List of admin user ids for sending posts; separated by space", "required":  true},
         "ENV": {"description": "Set this to ANYTHING","value": "ANYTHING"}
