--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # --- For-Bot-Working --------- #
 pyrogram~=2.0.59
 TgCrypto
+uvloop
 # --- For-Database ------------ #
 sqlalchemy~=1.3.23
 psycopg2-binary
